--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,29 @@
     <main id="contact">
         <h2>Contact</h2>
 
+        <form id="form-contato">
+            <label>Nome</label><br>
+            <input id="input" type="text"><br>
+
+            <label>Email</label><br>
+            <input id="input" type="text"><br>
+
+            <label>Message</label><br>
+            <textarea id="input-message" type="text"></textarea><br>
+
+            <label>How did you found Jane's music</label><br>
+            <input type="radio" name="social-media" id="instagram" value="instagram">Instagram<br>
+            <input type="radio" name="social-media" id="facebook" value="facebook">Facebook<br>
+            <input type="radio" name="social-media" id="youtube" value="youtube">Youtube<br>
+
+            
+            <input type="checkbox" name="news" id="newslatter">Do you want to subscribe our newslatter to
+
+            <br><button id="button">Send</button>
+
+        </form>
+        
+
         <h3>MANAGEMENT | Karen Blanche</h3>
         <p>email:<a href="mailto:email@example.com">info@mysite.com</a></p>
         <p>phone:<a href="">123-456-7890</a></p>
